key in vercel app

--- a/vercel.json
+++ b/vercel.json
@@ -15,9 +15,10 @@
     "env": {
         "APP_ENV": "production",
         "APP_DEBUG": "true",
-        "APP_URL": "https://your.url.from.vercel.app",
+        "APP_URL": "",
         "APP_EVENTS_CACHE": "/tmp/events.php",
         "APP_PACKAGES_CACHE": "/tmp/packages.php",
+        "APP_KEY": "base64:GsYbslEIBAB/Klqp6twewB/xDFpvg3T4+Nxv7jroP7w=",
         "APP_ROUTES_CACHE": "/tmp/routes.php",
         "APP_SERVICES_CACHE": "/tmp/services.php",
         "VIEW_COMPILED_PATH": "/tmp",
